network.tf
# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_network
resource "google_compute_network" "vpc" {
  name                            = "${var.app-name}-network"
  routing_mode                    = "REGIONAL"
  auto_create_subnetworks         = false
  mtu                             = 1460
  delete_default_routes_on_create = false
  enable_ula_internal_ipv6        = true

  depends_on = [
    google_project_service.compute,
  ]
}

# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_subnetwork
resource "google_compute_subnetwork" "private" {
  name                     = "${var.app-name}-private"
  ip_cidr_range            = var.subnet
  region                   = var.region
  network                  = google_compute_network.vpc.id
  private_ip_google_access = false
  #stack_type               = "IPV4_IPV6"
  #ipv6_access_type         = "INTERNAL"
}


# create a public ip for nat service
resource "google_compute_address" "nat_ip" {
  name   = "${var.app-name}-nap-ip"
  region = var.region
}

# create a nat to allow private instances connect to internet
resource "google_compute_router" "nat-router" {
  name    = "${var.app-name}-nat-router"
  network = google_compute_network.vpc.name
}

resource "google_compute_router_nat" "nat-gateway" {
  name                               = "${var.app-name}-nat-gateway"
  router                             = google_compute_router.nat-router.name
  nat_ip_allocate_option             = "MANUAL_ONLY"
  nat_ips                            = [google_compute_address.nat_ip.self_link]
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
  depends_on                         = [google_compute_address.nat_ip]
}

# show nat ip address
output "nat_ip_address" {
  value = google_compute_address.nat_ip.address
}
